feat(containers): добавить bulk выгрузку Excel и мультивыбор с фильтром по packed_date
- добавить backend endpoint POST /api/containers/download_bulk с фильтрами:
  container_ids, диапазон container_id, диапазон packed_date
- добавить проверку прав доступа для списка контейнеров и сортировки выгрузки
- расширить данные контейнеров (packed_date, created_by_id) в executor
- добавить генерацию bulk Excel в один лист
- обновить /containers/download: single/multi режим, select all,
  фильтр дат from/to (apply/reset), загрузка выбранных контейнеров
- перевести фронт на APP_CONFIG BASE_URL и подключить config.js на static-страницах

--- a/.env
+++ b/.env
@@ -17,7 +17,10 @@ DM_DB_USER=dm_manager
 DM_DB_PASSWORD=dm_manager11
 DM_DB_NAME=article_info
 
+#IIS config
+#host="192.168.2.101"
+#port=5001
 
-host="192.168.2.101"
+#local_pc config (debug)
+host="127.0.0.1"
 port=5001
-
